<resources>
    <string name="app_name">CleanSmart</string>
    <string name="login_screen_title">CleanSmart </string>
    <string name="username_label">Username: </string>
    <string name="username_hint">Enter Username</string>
    <string name="password_label">Password: </string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button">Log In</string>

    <string name="registration_title">Create Account</string>
    <string name="full_name_label">Full Name:</string>
    <string name="full_name_hint">Enter your full name</string>
    <string name="email_label">Email:</string>
    <string name="email_hint">Enter your email</string>
    <string name="phone_label">Phone:</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="confirm_password_label">Confirm Password:</string>
    <string name="confirm_password_hint">Re-enter password</string>
    <string name="register_button">Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have account? Sign up</string>

    <string name="profile_title">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_name">John Doe</string>
    <string name="profile_email">johndoe@email.com</string>
    <string name="profile_phone">+1 234 567 8900</string>
    <string name="about_me">About Me</string>
    <string name="about_me_content">I am a software developer with passion for Android development.</string>
    <string name="my_interests">My Interests</string>
    <string name="interests_content">Android, Kotlin, Java, Mobile Development</string>
    <string name="location_label">Location</string>
    <string name="location_content">New York, USA</string>
    <string name="logout">Logout</string>
    <string name="noaccount">No Account?</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="signup">Sign Up</string>
    <string name="title">CleanSmart</string>
    <string name="welcome">Welcome!</string>
    <string name="details">Enter your details</string>
    <string name="username">Email or Phone</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="Signin">Sign in</string>
    <string name="logoutconfirmation">Are you sure you want to</string>
    <string name="logoutconfirmation1">Log out?</string>
    <string name="save">Log out and Save</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>

    <!-- Add these entries to your strings.xml file -->

    <string name="change_password_title">Change Password</string>
    <string name="old_password_label">Old Password</string>
    <string name="old_password_hint">Enter your current password</string>
    <string name="new_password_label">New Password</string>
    <string name="new_password_hint">Enter new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_button">Save</string>

    <string name="forgot_password_title">Forgot Password?</string>
    <string name="provide_email_phone">Provide Email or Phone Number</string>
    <string name="email_phone_label">Email or Phone</string>
    <string name="code_label">Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="sign_in">Sign in</string>

    <!-- Login screen strings -->
    <string name="back_button">Back</string>
    <string name="back_button_description">Navigate back</string>
    <string name="sign_up_button_description">Create a new account</string>
    <string name="app_logo_description">CleanSmart logo</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    
    <!-- Password requirements -->
    <string name="password_requirements">Password must contain at least 8 characters, including uppercase, lowercase, and numbers</string>
    <string name="password_error">Password does not meet requirements</string>
    <string name="email_error">Please enter a valid email address</string>

</resources>